# rapidsmpf

./: .pre-commit-config.yaml
cpp/: CMakeLists.txt
cpp/include/rapidsmpf/streaming/core/: channel.hpp  message.hpp  node.hpp
cpp/include/rapidsmpf/streaming/cudf/: parquet.hpp
cpp/src/streaming/core/: leaf_node.cpp  node.cpp
cpp/src/streaming/cudf/: parquet.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/streaming/: test_leaf_node.cpp  test_shuffler.cpp
python/rapidsmpf/rapidsmpf/streaming/core/: channel.pyi  channel.pyx
python/rapidsmpf/rapidsmpf/streaming/cudf/: CMakeLists.txt  parquet.pyi  parquet.pyx
python/rapidsmpf/rapidsmpf/tests/streaming/: test_read_parquet.py
